Fixed experience page mobile css, added highlight behind images for visibility

--- a/docs/style.css
+++ b/docs/style.css
@@ -411,6 +411,10 @@ body{
     height: 120px;
     object-fit: contain;
     margin-top: 0.75rem;
+    background-color: #ffffff;
+    border: 2px solid rgb(245,184,0);
+    border-radius: 50%;
+    padding: 0.2rem;
 }
 
 .experience-entry::before{
@@ -599,47 +603,51 @@ body{
     text-align: center;
     padding: 1rem;
 }
-
+/* Mobile Display */
 @media (max-width: 760px){
-        .hamburger{
-            display: block;
-        }
+    .hamburger{
+        display: block;
+    }
 
-        .nav-links{
-            display: none;
-            position: absolute;
-            top: var(--nav-height);
-            left: 0;
-            width: 100%;
-            flex-direction: column;
-            background-color: var(--bg-dark);
-            padding: 1rem 2rem;
-            gap: 1rem;
-        }
-        
-        .nav-links.open{
-            display: flex;
-        }
+    .nav-links{
+        display: none;
+        position: absolute;
+        top: var(--nav-height);
+        left: 0;
+        width: 100%;
+        flex-direction: column;
+        background-color: var(--bg-dark);
+        padding: 1rem 2rem;
+        gap: 1rem;
+    }
+    
+    .nav-links.open{
+        display: flex;
+    }
 
-        .nav-icons{
-            display: none;
-        }
+    .nav-icons{
+        display: none;
+    }
 
-         .hero{
-            flex-direction: column;
-            min-height: calc(100vh-var(--nav-height));
-            height: auto;
-            justify-content: flex-start; 
-        }
+    .hero{
+        flex-direction: column;
+        min-height: calc(100vh-var(--nav-height));
+        height: auto;
+        justify-content: flex-start; 
+    }
+    
+    .experience-entry{
+        flex-direction: column;
+    }
 
-        .about{
+    .about{
         flex-direction: column;
         align-items: center;
         padding: 4rem 2rem;
         gap: 3rem;
-        }
+    }
 
-        .about-card-inner{
+    .about-card-inner{
         width: 100%;
-        }
+    }
 }
